--- a/whispurraudio/WhispurrMacOS/css/navigation.css
+++ b/whispurraudio/WhispurrMacOS/css/navigation.css
@@ -1,5 +1,5 @@
 nav {
-    background: #000;
+    background-color: #000;
     margin: 0 0 1em;
     padding: 0;
     position: relative;
@@ -20,8 +20,13 @@ ul.menu {
 }
 
 #macoslogo img {
-    height: 1.25rem;
-    width: 1.25rem;
+    height: 1.5rem;
+    width: 1.5rem;
+}
+
+#apple-logo img {
+    height: 1.5rem;
+    width: 1.5rem;
 }
 
 .nav-list #time,
@@ -33,7 +38,7 @@ ul.menu {
     float: left;
     height: 1.75rem;
     line-height: 1.5rem;
-    padding: 0.25rem 0.5rem 0;
+    padding: 0.125rem 0.25rem 0;
 }
 
 .nav-list li:hover ul.menu li img {
@@ -56,7 +61,7 @@ ul.menu {
 
 .nav-wrapper {
     background-color: #ddd;
-    border-radius: 1em 1em 0 0;
+    border-radius: .5em .5em 0 0;
     box-shadow: inset 1px 1px 0 0 #888, inset -1px -1px 0 0 #fff;
     display: inline-block;
     height: 100%;
