--- a/whispurraudio/WhispurrMacOS/css/platinum.css
+++ b/whispurraudio/WhispurrMacOS/css/platinum.css
@@ -5,7 +5,6 @@
 @import url(navigation.css);
 
 :root {
-
     --color2-gradient-0: #000;
     --color2-gradient-1: #111;
     --color2-gradient-2: #222;
@@ -60,46 +59,49 @@
     --text-color: var(--color1-gradient-0);
 
     --button-background: var(--color1-gradient-13);
-    --button-box-shadow: inset -1px -1px 0 0 var(--color1-gradient-7), inset -2px -2px 0 0 var(--color1-gradient-10),
-        inset 1px 1px 0 0 var(--color1-gradient-13), inset 2px 2px 0 0 var(--color1-gradient-15);
-    --button-hover-bezel: 0 0 0 1px var(--color1-gradient-10), 0 0 0 2px var(--color1-gradient-13), 0 0 0 3px var(--color1-gradient-0);
+    --button-box-shadow: inset -1px -1px 0 0 var(--color1-gradient-7),
+        inset -2px -2px 0 0 var(--color1-gradient-10),
+        inset 1px 1px 0 0 var(--color1-gradient-13),
+        inset 2px 2px 0 0 var(--color1-gradient-15);
+    --button-hover-bezel: 0 0 0 1px var(--color1-gradient-10),
+        0 0 0 2px var(--color1-gradient-13), 0 0 0 3px var(--color1-gradient-0);
 }
 
 :root.whispurrTheme {
-    --color2-gradient-0: #240F2F;
+    --color2-gradient-0: #240f2f;
     --color2-gradient-1: #311440;
-    --color2-gradient-2: #3D1A51;
-    --color2-gradient-3: #4A1F62;
+    --color2-gradient-2: #3d1a51;
+    --color2-gradient-3: #4a1f62;
     --color2-gradient-4: #572572;
-    --color2-gradient-5: #642A83;
+    --color2-gradient-5: #642a83;
     --color2-gradient-6: #703094;
-    --color2-gradient-7: #7D35A5;
-    --color2-gradient-8: #7D35A5;
-    --color2-gradient-9: #9052B2;
-    --color2-gradient-10: #A26FBF;
-    --color2-gradient-11: #B58CCC;
-    --color2-gradient-12: #C7A8D8;
-    --color2-gradient-13: #DAC5E5;
-    --color2-gradient-14: #ECE2F2;
+    --color2-gradient-7: #7d35a5;
+    --color2-gradient-8: #7d35a5;
+    --color2-gradient-9: #9052b2;
+    --color2-gradient-10: #a26fbf;
+    --color2-gradient-11: #b58ccc;
+    --color2-gradient-12: #c7a8d8;
+    --color2-gradient-13: #dac5e5;
+    --color2-gradient-14: #ece2f2;
     --color2-gradient-15: #fff;
 
-    --color1-gradient-0: #210B16;
-    --color1-gradient-1: #3D1429;
-    --color1-gradient-2: #591E3C;
-    --color1-gradient-3: #75274F;
+    --color1-gradient-0: #210b16;
+    --color1-gradient-1: #3d1429;
+    --color1-gradient-2: #591e3c;
+    --color1-gradient-3: #75274f;
     --color1-gradient-4: #913063;
-    --color1-gradient-5: #AD3976;
-    --color1-gradient-6: #C94389;
-    --color1-gradient-7: #E54C9C;
-    --color1-gradient-8: #E54C9C;
-    --color1-gradient-9: #E966AA;
-    --color1-gradient-10: #EC7FB8;
-    --color1-gradient-11: #F099C6;
-    --color1-gradient-12: #F4B2D5;
-    --color1-gradient-13: #F8CCE3;
-    --color1-gradient-14: #FBE5F1;
+    --color1-gradient-5: #ad3976;
+    --color1-gradient-6: #c94389;
+    --color1-gradient-7: #e54c9c;
+    --color1-gradient-8: #e54c9c;
+    --color1-gradient-9: #e966aa;
+    --color1-gradient-10: #ec7fb8;
+    --color1-gradient-11: #f099c6;
+    --color1-gradient-12: #f4b2d5;
+    --color1-gradient-13: #f8cce3;
+    --color1-gradient-14: #fbe5f1;
     --color1-gradient-15: #fff;
-    
+
     --scrollbar-thumb-highlight: var(--color2-gradient-13);
     --scrollbar-thumb-shadow: var(--color2-gradient-10);
     --scrollbar-thumb-gradient1: var(--color2-gradient-7);
@@ -108,40 +110,40 @@
 }
 
 :root.whispurrThemeInverted {
-    --color1-gradient-0: #240F2F;
+    --color1-gradient-0: #240f2f;
     --color1-gradient-1: #311440;
-    --color1-gradient-2: #3D1A51;
-    --color1-gradient-3: #4A1F62;
+    --color1-gradient-2: #3d1a51;
+    --color1-gradient-3: #4a1f62;
     --color1-gradient-4: #572572;
-    --color1-gradient-5: #642A83;
+    --color1-gradient-5: #642a83;
     --color1-gradient-6: #703094;
-    --color1-gradient-7: #7D35A5;
-    --color1-gradient-8: #7D35A5;
-    --color1-gradient-9: #9052B2;
-    --color1-gradient-10: #A26FBF;
-    --color1-gradient-11: #B58CCC;
-    --color1-gradient-12: #C7A8D8;
-    --color1-gradient-13: #DAC5E5;
-    --color1-gradient-14: #ECE2F2;
+    --color1-gradient-7: #7d35a5;
+    --color1-gradient-8: #7d35a5;
+    --color1-gradient-9: #9052b2;
+    --color1-gradient-10: #a26fbf;
+    --color1-gradient-11: #b58ccc;
+    --color1-gradient-12: #c7a8d8;
+    --color1-gradient-13: #dac5e5;
+    --color1-gradient-14: #ece2f2;
     --color1-gradient-15: #fff;
 
-    --color2-gradient-0: #210B16;
-    --color2-gradient-1: #3D1429;
-    --color2-gradient-2: #591E3C;
-    --color2-gradient-3: #75274F;
+    --color2-gradient-0: #210b16;
+    --color2-gradient-1: #3d1429;
+    --color2-gradient-2: #591e3c;
+    --color2-gradient-3: #75274f;
     --color2-gradient-4: #913063;
-    --color2-gradient-5: #AD3976;
-    --color2-gradient-6: #C94389;
-    --color2-gradient-7: #E54C9C;
-    --color2-gradient-8: #E54C9C;
-    --color2-gradient-9: #E966AA;
-    --color2-gradient-10: #EC7FB8;
-    --color2-gradient-11: #F099C6;
-    --color2-gradient-12: #F4B2D5;
-    --color2-gradient-13: #F8CCE3;
-    --color2-gradient-14: #FBE5F1;
+    --color2-gradient-5: #ad3976;
+    --color2-gradient-6: #c94389;
+    --color2-gradient-7: #e54c9c;
+    --color2-gradient-8: #e54c9c;
+    --color2-gradient-9: #e966aa;
+    --color2-gradient-10: #ec7fb8;
+    --color2-gradient-11: #f099c6;
+    --color2-gradient-12: #f4b2d5;
+    --color2-gradient-13: #f8cce3;
+    --color2-gradient-14: #fbe5f1;
     --color2-gradient-15: #fff;
-    
+
     --scrollbar-thumb-highlight: var(--color2-gradient-13);
     --scrollbar-thumb-shadow: var(--color2-gradient-10);
     --scrollbar-thumb-gradient1: var(--color2-gradient-7);
@@ -169,7 +171,7 @@ html {
     height: 100%;
     margin: 0;
     font-family: Chicago, Charcoal, "Times New Roman", Georgia, serif;
-    font-size: .75em;
+    font-size: 0.75em;
     font-weight: 100 !important;
     color: var(--text-color);
 }
@@ -190,8 +192,11 @@ html {
 }
 .window button:active {
     background-color: var(--color2-gradient-6);
-    box-shadow: var(--button-hover-bezel), inset -1px -1px 0 0 var(--color1-gradient-8),
-        inset -2px -2px 0 0 var(--color2-gradient-7), inset 1px 1px 0 0 var(--color2-gradient-4), inset 2px 2px 0 0 var(--color2-gradient-5);
+    box-shadow: var(--button-hover-bezel),
+        inset -1px -1px 0 0 var(--color1-gradient-8),
+        inset -2px -2px 0 0 var(--color2-gradient-7),
+        inset 1px 1px 0 0 var(--color2-gradient-4),
+        inset 2px 2px 0 0 var(--color2-gradient-5);
     color: var(--color1-gradient-15);
 }
 .window button:hover {
@@ -204,7 +209,7 @@ html {
         2px 2px 0 0 var(--window-highlight),
         inset 2px 2px 0 0 var(--window-highlight),
         inset -2px -2px 0 0 var(--window-shadow);
-        font-size: 1.5rem;
+    font-size: 1.5rem;
 }
 .window .inner {
     background-color: var(--window-inner-background);
@@ -228,7 +233,8 @@ div.window .inner {
     overflow-y: scroll;
 }
 .control-box {
-    box-shadow: inset -2px -2px 0 0 var(--window-highlight), inset 2px 2px 0 0 var(--window-shadow);
+    box-shadow: inset -2px -2px 0 0 var(--window-highlight),
+        inset 2px 2px 0 0 var(--window-shadow);
     padding: 2px;
     top: 6px;
     z-index: 100;
@@ -240,7 +246,8 @@ div.window .inner {
         var(--button-gradient-highlight)
     );
     border: 2px solid var(--color2-gradient-2);
-    box-shadow: inset 2px 2px 0 0 var(--button-background), inset -2px -2px 0 0 var(--button-shadow);
+    box-shadow: inset 2px 2px 0 0 var(--button-background),
+        inset -2px -2px 0 0 var(--button-shadow);
     text-indent: -99999rem;
     display: block;
     height: 2rem;
@@ -281,7 +288,9 @@ div.window .inner {
     width: 100%;
     height: 100%;
     border: 2px solid var(--color2-gradient-1);
-    box-shadow: 2px 4px var(--color2-gradient-1), inset 2px 2px 0 0 var(--window-highlight), inset -2px -2px 0 0 var(--window-shadow),
+    box-shadow: 2px 4px var(--color2-gradient-1),
+        inset 2px 2px 0 0 var(--window-highlight),
+        inset -2px -2px 0 0 var(--window-shadow),
         inset 8px 4px var(--window-color), inset -8px -8px var(--window-color);
     font-size: 2rem;
     font-weight: 400;
@@ -331,4 +340,3 @@ button {
     font-family: inherit;
     font-size: inherit;
 }
-
