--- a/whispurraudio/WhisTwitch/css/whistwitch.css
+++ b/whispurraudio/WhisTwitch/css/whistwitch.css
@@ -1,17 +1,245 @@
+@import url("https://use.typekit.net/stb6olv.css");
+@import url('https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css');
+
+:root {
+    font-family: futura-pt, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    line-height: 1;
+    color: white;
+    font-size: 30px;
+    text-shadow: 0px 0px 5px rgb(59, 60, 152), 0px 0px 10px rgb(59, 60, 152);
+}
+
+body {
+    margin: 0;
+}
 .gradient-background {
-    background: linear-gradient(315deg,#2f23ac,#7d35a5,#e54c9c);
+    background: linear-gradient(315deg, #2f23ac, #7d35a5, #e54c9c);
     background-size: 180% 180%;
     animation: gradient-animation 18s ease infinite;
-  }
-  
-  @keyframes gradient-animation {
+    margin: 0;
+    width: 1920px;
+    height: 1080px;
+}
+
+@keyframes gradient-animation {
     0% {
-      background-position: 0% 50%;
+        background-position: 0% 50%;
     }
     50% {
-      background-position: 100% 50%;
+        background-position: 100% 50%;
     }
     100% {
-      background-position: 0% 50%;
+        background-position: 0% 50%;
     }
-  }
+}
+
+.parent {
+    display: grid;
+    grid-template-columns: 210px 440px 752px 48px 374px;
+    grid-template-rows: 178px minmax(0, 60fr) minmax(0, 11fr) 48px 190px;
+    grid-column-gap: 24px;
+    grid-row-gap: 24px;
+    width: 1920px;
+    height: 1080px;
+    padding: 0;
+}
+
+.gridAreaGame {
+    grid-area: 1 / 1 / 5 / 5;
+    background: #73ad21;
+}
+
+.gridAreaName {
+    grid-area: 1 / 4 / 2 / 6;
+    /* background: purple; */
+}
+
+.gridAreaGamePoster {
+    grid-area: 4 / 1 / 6 / 2;
+    /* background: blue; */
+    margin: 12px;
+}
+
+.gridAreaCam {
+    grid-area: 3 / 5 / 6 / 6;
+    /* background: yellow; */
+}
+
+.gridAreaFooter {
+    grid-area: 5 / 3 / 6 / 5;
+    /* background: red; */
+}
+
+.gridAreaGameName {
+    grid-area: 5 / 2 / 6 / 3;
+    /* background: #73ad21; */
+}
+
+.gridAreaFooter,
+.gridAreaGameName {
+    margin-bottom: 12px;
+}
+
+.gridAreaBG {
+    grid-area: 1 / 1 / 6 / 6;
+    clip-path: url(#bgClip);
+    z-index: -2;
+}
+
+.gridAreaOverlay {
+    grid-area: 1 / 1 / 6 / 6;
+}
+
+.gridAreaChat {
+    grid-area: 2 / 5 / 3 / 6;
+    padding: 12px;
+    margin: 24px 0px 24px 24px;
+    z-index: -1;
+  background-color: {{chatBackgroundColor}};
+    background-blend-mode: '{{chatBackgroundBlendMode}}';
+}
+
+.gridAreaGamePoster img {
+    display: block;
+    height: 100%;
+    margin-left: auto;
+    margin-right: auto;
+}
+.boxOutline {
+    fill: #9484b4;
+}
+
+#nowPlayingArt {
+    object-fit: cover;
+    border-radius: 12px;
+}
+
+#nowPlaying {
+    font-size: 48px;
+    font-weight: normal;
+    text-transform: lowercase;
+}
+
+#nowPlayingName {
+    overflow-wrap: break-word;
+    font-size: 54px;
+    font-weight: 700;
+    max-width: 440px;
+}
+
+.boxShadow {
+    box-shadow: 0px 0px 5px 3px rgba(59, 60, 152, 0.75);
+}
+
+.nowPlayingGrid {
+    display: grid;
+    grid-template-rows: auto min-content;
+    grid-template-columns: 100%;
+    align-items: end;
+}
+
+.infoGrid {
+    display: grid;
+    grid-template-columns: 1fr repeat(2, auto);
+    grid-template-rows: repeat(2, min-content) auto repeat(2, min-content);
+    grid-column-gap: 24px;
+    grid-row-gap: 0px;
+    text-align: right;
+}
+
+.miscArea {
+    grid-area: 1 / 1 / 6 / 2;
+}
+
+#label1Text,
+#label2Text,
+#label3Text,
+#label4Text {
+    text-transform: lowercase;
+}
+
+#label1Value,
+#label2Value,
+#label3Value,
+#label4Value {
+    font-size: 36px;
+    font-weight: bold;
+}
+
+#label1Text {
+    grid-area: 1 / 2 / 2 / 3;
+}
+#label1Value {
+    grid-area: 2 / 2 / 3 / 3;
+}
+#label2Text {
+    grid-area: 1 / 3 / 2 / 4;
+}
+#label2Value {
+    grid-area: 2 / 3 / 3 / 4;
+}
+#label3Text {
+    grid-area: 4 / 2 / 5 / 3;
+}
+#label3Value {
+    grid-area: 5 / 2 / 6 / 3;
+}
+#label4Text {
+    grid-area: 4 / 3 / 5 / 4;
+}
+#label4Value {
+    grid-area: 5 / 3 / 6 / 4;
+}
+
+.chat-container{
+    display: {{alignMessages}};
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-start;
+    align-content: flex-start;
+    height:98%;
+    overflow-sizing: border-box;
+      overflow: hidden;
+}
+
+.message-row{
+    overflow: hidden;
+    font-weight: {{fontWeight}} ! important;
+    flex: 0 0 auto;
+    width:100%;
+    margin-bottom:5px;
+    vertical-align: baseline;
+}
+
+.badge{
+    display:inline;
+    height:{{fontSize}}px;
+    visibility: hidden;
+}
+
+.user-box{
+    display:inline;
+    font-size:{{fontSize}}px;
+}
+
+.user-box > span{
+    font-size:{{fontSize}}px;
+}
+
+.user-message{
+    display:inline;
+    font-size:{{fontSize}}px;
+    overflow-wrap: break-word;
+}
+
+.emote{
+    height: {emoteSize}px;
+    vertical-align: middle;
+    background-repeat:no-repeat;
+}
+
+.action{
+    font-style: italic;
+}
